# parse-sap-atom-feed

./: .gitignore  Cargo.toml  README.md
docs/: decimals.md  usage.md
src/: lib.rs
src/atom/: collection.rs  mod.rs  service.rs  unit_tests.rs  workspace.rs
src/atom/feed/: author.rs  mod.rs
src/atom/feed/entry/: category.rs  content.rs  entry_category.rs  mod.rs  unit_tests.rs
src/atom/feed/entry/content/: mod.rs
src/atom/link/: mod.rs  unit_tests.rs
src/deserializers/: mod.rs  unit_tests.rs
src/deserializers/edm_datetime/: mod.rs  unit_tests.rs
src/deserializers/edm_decimal/: mod.rs  parser_tests.rs  unit_tests.rs
src/deserializers/edm_string/: mod.rs  unit_tests.rs
src/error/: mod.rs  unit_tests.rs
src/error/inner_error/application/: mod.rs  unit_tests.rs
src/error/inner_error/error_resolution/: unit_tests.rs
src/odata_error/: mod.rs  unit_tests.rs
src/odata_error/inner_error/: mod.rs  unit_tests.rs
src/odata_error/inner_error/application/: unit_tests.rs
src/odata_error/inner_error/error_details/: mod.rs  unit_tests.rs
src/odata_error/inner_error/error_resolution/: mod.rs  unit_tests.rs
src/test_utils/: mod.rs
src/xml/: mod.rs  unit_tests.rs
test_data/: application.xml  atom_entry.xml  atom_service.xml  atom_workspace.xml  error_detail.xml  error_resolution.xml  error_with_details.xml  error_without_details.xml  inner_error.xml
