[package]
name = "parse-sap-atom-feed"
version = "1.0.1"
authors = ["Chris Whealy <chris@whealy.com>"]
edition = "2021"
description = "Parse an SAP OData V2 XML atom:Feed"
keywords = ["odata", "sap", "atom", "parser", "opendata"]
repository = "https://github.com/ChrisWhealy/parse-sap-atom-feed"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.32", features = ["overlapped-lists", "serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
